# my-skills

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AI 测试设计实践：从需求结构化到测试用例生成.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  分层测试.md  分层测试使用场景.md
.claude-plugin/: marketplace.json
.darwin-results/: 2026-07-04-comparison.md  results.tsv
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  skill-proposal.md
.github/workflows/: ci.yml
.patches/change-impact-analyzer-v1.1.0/: 0001-feat-change-impact-analyzer-SKILL-v1.1.0.patch  0002-docs-change-impact-analyzer-README-v1.1.0.patch  0003-test-change-impact-analyzer-Mode-B-Patch.patch
.trae/rules/: git-commit-message.md  git-workflow.md
docs/: installation.md  project-structure.md  skills-overview.md
knowledge/products/: README.md  products-template.md
plugins/: README.md
plugins/testing/: README.md
plugins/testing/mcp-servers/review-checker/: README.md  pyproject.toml
plugins/testing/mcp-servers/review-checker/src/review_checker_mcp/: __init__.py  schemas.py  server.py  validators.py
plugins/testing/mcp-servers/review-checker/tests/: test_server.py  test_validators.py
plugins/wechat-formatter/: README.md
rules/: git-commit-message.md  no-formatting.md  testcases.mdc
scripts/: check-knowledge-count.py  check-version-sync.py  install-testing-bundle.ps1
skills/.darwin-results/: 2026-07-04-baseline.md  2026-07-04-split-summary.md  results.tsv
skills/bug-analyzer/: SKILL.md
skills/test-case-engineer/: README.md  SKILL.md
(+185 files in other folders)
